# pos2-chip

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Options.cmake  README.md  asan.cmake  build-release.sh  build-tests.sh  cmake-variants.yaml  patch_fse.py  run-tests.sh  tsan.cmake  ubsan.cmake
.github/workflows/: bench-build.yaml  build.yaml  format.yaml  rust.yaml
chip/: chip-proof-of-space.md
crates/chia-pos2/: Cargo.toml  build.rs  fse
crates/chia-pos2-tools/: Cargo.toml
crates/chia-pos2/benches/: pos2_bench.rs
crates/chia-pos2/fuzz/: Cargo.toml
crates/chia-pos2/fuzz/fuzz_targets/: prover.rs  solver.rs  validate.rs
crates/chia-pos2/src/: bits.rs  lib.rs
lib/common/: CMakeLists.txt
lib/common/include/common/: PlotData.hpp  PlotFile.hpp  Timer.hpp
lib/doctest/: commit
lib/fse/: .clang_complete  CMakeLists.txt  LICENSE  README.md  commit
lib/fse/fse/: compiler.h  entropy_common.c  fse.h  fseU16.c  fseU16.h  fse_compress.c  fse_decompress.c  huf.h  huf_compress.c  huf_decompress.c
lib/pos/: CMakeLists.txt
lib/pos/include/pos/: BlakeHash.hpp  ProofCore.hpp  ProofHashing.hpp  ProofValidator.hpp  XsEncryptor.hpp
src/: CMakeLists.txt  api.cpp
src/common/: ParallelForRange.hpp  SafeFractionMath.hpp  Timer.hpp  Utils.hpp  thread.hpp
src/libpos2/: CMakeLists.txt  libpos2.cpp
src/plot/: ChunkCompressor.hpp  LayoutPlanner.hpp  MemoryGrid.hpp  PlotData.hpp  PlotFile.hpp  PlotFileT.hpp  PlotFormat.hpp  PlotIO.hpp  PlotLayout.hpp  Plotter.hpp  Progress.hpp  RadixSort.hpp  ResettableArenaResource.hpp  TableConstructorGeneric.hpp  TablePruner.hpp  WorkingBuffer.hpp
src/pos/: BlakeHash.hpp  ChachaHash.hpp  Chainer.hpp  FeistelCipher.hpp  ProofConstants.hpp  ProofCore.hpp  ProofFragment.hpp  ProofFragmentScanFilter.hpp  ProofHashing.hpp  ProofParams.hpp  ProofValidator.hpp  QualityChainer.hpp  XsEncryptor.hpp
src/pos/aes/: AesHash.hpp  endian.h  intrin_portable.h  soft_aes.hpp
src/prove/: PartitionedProver.hpp  ProofFragmentScanFilter.hpp  Prover.hpp
src/solve/: ParallelRadixSort.hpp  ProofSolverTimings.hpp  Solver.hpp
src/tools/analytics/: CMakeLists.txt  DiskBench.hpp  HashBench.hpp  analytics_main.cpp
src/tools/plotter/: CMakeLists.txt  plotter_main.cpp
src/tools/postune/: index.html  postune.js  proof_fragments.md
src/tools/prover/: CMakeLists.txt  DiskBench.hpp  prover_main.cpp  test_disk_perf_groupings.py
src/tools/solver/: CMakeLists.txt  solver_main.cpp
src/tools/verify/: CMakeLists.txt  verify_main.cpp
tests/: CMakeLists.txt  aes_test_cases.hpp  blake_test_cases.hpp  generate_blake_vectors.py  test_ProofFragmentScanFilter.cpp  test_Utils.cpp  test_aes.cpp  test_all.cpp  test_blake.cpp  test_chain_average.cpp  test_chainer.cpp  test_chaining.cpp  test_chunk_compressor.cpp  test_parallel_for_range.cpp  test_partitioned_plot_challenge_solve_validate.cpp  test_plot_challenge_solve_validate.cpp  test_plot_file.cpp  test_proof_core_math.cpp  test_solver.cpp  test_util.h
tests/unit/: test_ProofFragmentScanFilter.hpp  test_Utils.hpp  test_chaining.hpp  test_plot_file.hpp  test_stripe_io.hpp  test_working_buffer.hpp  tests_unit.hpp
tools/plotter/: CMakeLists.txt
tools/plotter/include/: PlotData.hpp  PlotFile.hpp  Plotter.hpp  RadixSort.hpp  TableConstructorGeneric.hpp  TablePruner.hpp
tools/plotter/src/: main.cpp
