[package]
name = "chia-pos2"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0"
description = "A library for creating plots, validating proofs of space, farming partial proofs and solving proofs. Using Chia proof of space v2"
authors = [
    "Arvid Norberg <arvid@chia.net>",
    "Harold Brenes <h.brenes@chia.net>",
    "Nick Halper <n.halper@chia.net>"
]
homepage = "https://github.com/Chia-Network/pos2/crates/chia-po2"
repository = "https://github.com/Chia-Network/pos2/crates/chia-pos2"

[lib]
bench = false

[features]
arbitrary = ["dep:arbitrary"]

[dependencies]
serde = { workspace = true }
serde-big-array = { workspace = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
